sql/src/test/resources/drill/window/queries/negative/q11.res
0\t
UNSUPPORTED_OPERATION ERROR: This type of window frame is currently not supported 
See Apache Drill JIRA: DRILL-3188
